--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/email.csv filter=lfs diff=lfs merge=lfs -text
 data/emails.csv filter=lfs diff=lfs merge=lfs -text
+data/* filter=lfs diff=lfs merge=lfs -text
