--- a/configs/dev_config.yaml
+++ b/configs/dev_config.yaml
@@ -1,7 +1,8 @@
 modules/:
-  # config for training modulse forder
+  #Configuration of the training_modules forder
   training_modules/:
 
+    #Configuration of the base_trainer.py file
     base_trainer.py:
       searchCV:
         n_jobs: -1
@@ -9,16 +10,16 @@ modules/:
         verbose: 3
         n_iter: 10
 
+    #Configuration of the classification.py file
     classification.py:
 
-      random_state: 42
       scoring: "accuracy"
+      random_state: 42
 
       param_grids:
         LogisticRegression: 
           C: [0.1, 1, 10]
-          solver: ["liblinear", "lbfgs"]             
-
+          solver: ["liblinear", "lbfgs"]        
         RandomForestClassifier: 
           n_estimators: [100, 200, 300, 500]
           max_depth: [5, 10, 15]
@@ -26,22 +27,36 @@ modules/:
           min_samples_leaf: [1, 2, 4]
           max_features: ["sqrt", "log2", None]
           bootstrap: [True, False]
-        
         LinearSVC:
           C: [0.01, 0.1, 1, 10, 100]
           max_iter: [1000, 5000, 10000]
           dual: [True, False]
-        
         GaussianNB: 
           var_smoothing: [0.0000000010, 0.0000000100, 0.0000001000]        # [1e-9, 1e-8, 1e-7] Fix this error
 
-  # Config for utils file
-  utils.py:
-    save_model: 
-      filename: ""
-    load_model: 
-      filename: ""
-    save_gridsearch:
-      filename: ""
-    load_gridsearch:
-      filename: ""
+    #Configuration of the regression.py file
+    regression.py:
+
+      scoring: "acuracy"
+      random_state: 42
+
+      param_grids:
+        RandomForest:
+          n_estimators: [100, 200, 300],
+          max_depth: [10, 20, None],
+          min_samples_split: [2, 5, 10],
+          min_samples_leaf: [1, 2, 4],
+          max_features: ["sqrt", "log2", None],
+          bootstrap: [True, False]
+        LinearRegression:  # Linear regression doesn't require optimization
+        KNN:
+          n_neighbors: [3, 5, 7, 9, 11],
+          weights: ["uniform", "distance"],
+          p: [1, 2],
+          algorithm: ["auto", "ball_tree", "kd_tree", "brute"]
+        LinearSVR:
+          kernel: ["linear", "poly", "rbf"],
+          C: [0.1, 1, 10, 100],
+          epsilon: [0.01, 0.1, 0.2],
+          gamma: ["scale", "auto"]
+
